--- a/apps/website/src/pages/[...blog]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[...page].astro
@@ -5,17 +5,12 @@ import {
   Headline,
   Pagination
 } from '@astro-nx-depla/shared/ui';
-import {
-  getPostListStaticPaths,
-  getMetaByPage,
-  Post,
-} from '@astro-nx-depla/website/entities/post';
+import { Post } from '@astro-nx-depla/website/entities/post';
+
+export const getStaticPaths = Post.getPostListStaticPaths
 
 const { page } = Astro.props
-
-const meta = getMetaByPage(page)
-
-export const getStaticPaths = getPostListStaticPaths
+const meta = Post.getMetaByPage(page)
 ---
 
 <Layout {meta}>
