--- a/libs/shared/ui/src/lib/LatestPosts.astro
+++ b/libs/shared/ui/src/lib/LatestPosts.astro
@@ -1,9 +1,6 @@
 ---
 import { PostsGrid as Grid } from '@astro-nx-depla/shared/ui';
-
-import { getBlogPermalink } from '@astro-nx-depla/website/data-access/url';
-import { findLatestPosts } from '@astro-nx-depla/website/data-access/post';
-
+import { Post } from '@astro-nx-depla/website/entities/post';
 
 export interface Props {
   title?: string;
@@ -16,12 +13,12 @@ export interface Props {
 const {
   title = await Astro.slots.render('title'),
   allPostsText = 'View all posts',
-  allPostsLink = getBlogPermalink(),
+  allPostsLink = Post.getPostListPermalink(),
   information = await Astro.slots.render('information'),
   count = 4,
 } = Astro.props;
 
-const posts = await findLatestPosts({ count });
+const posts = await Post.findLatestPosts({ count });
 ---
 
 <section class="px-4 py-16 mx-auto max-w-7xl lg:py-20">
