--- a/libs/shared/ui/src/lib/Pagination.astro
+++ b/libs/shared/ui/src/lib/Pagination.astro
@@ -1,6 +1,5 @@
 ---
 import { Icon } from 'astro-icon';
-import { getPermalink } from '@astro-nx-depla/website/data-access/url';
 
 export interface Props {
   prevUrl: string;
@@ -16,13 +15,13 @@ const { prevUrl, nextUrl, prevText = 'Newer posts', nextText = 'Older posts' } =
   (prevUrl || nextUrl) && (
     <div class="container flex">
       <div class="flex flex-row mx-auto container justify-between">
-        <a href={getPermalink(prevUrl)} class={`btn btn-ghost md:px-3 px-3 mr-2 ${!prevUrl ? 'invisible' : ''}`}>
+        <a href={prevUrl} class={`btn btn-ghost md:px-3 px-3 mr-2 ${!prevUrl ? 'invisible' : ''}`}>
           <div class="flex flex-row align-middle">
             <Icon name="tabler:chevron-left" class="w-6 h-6" />
             <p class="ml-2">{prevText}</p>
           </div>
         </a>
-        <a href={getPermalink(nextUrl)} class={`btn btn-ghost md:px-3 px-3 ${!nextUrl ? 'invisible' : ''}`}>
+        <a href={nextUrl} class={`btn btn-ghost md:px-3 px-3 ${!nextUrl ? 'invisible' : ''}`}>
           <div class="flex flex-row align-middle">
             <span class="mr-2">{nextText}</span>
             <Icon name="tabler:chevron-right" class="w-6 h-6" />
