--- a/libs/shared/ui/src/lib/PostsGridItem.astro
+++ b/libs/shared/ui/src/lib/PostsGridItem.astro
@@ -4,8 +4,8 @@ import { Picture } from '@astrojs/image/components';
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import type { Post } from '@astro-nx-depla/website/types';
 
-import { getPermalink } from '@astro-nx-depla/website/data-access/url';
 import { findImage } from '@astro-nx-depla/website/data-access/url';
+import { Post } from '@astro-nx-depla/website/entities/post';
 
 const BLOG = CONFIG.get('entities.post');
 
@@ -44,7 +44,7 @@ const image = await findImage(post.image);
         post.title
       ) : (
         <a
-          href={getPermalink(post.permalink, 'post')}
+          href={Post.getPostPermalink(post.permalink)}
           class="hover:text-primary dark:hover:text-blue-700  transition ease-in duration-200"
         >
           {post.title}
