--- a/libs/shared/ui/src/lib/SinglePost.astro
+++ b/libs/shared/ui/src/lib/SinglePost.astro
@@ -5,17 +5,16 @@ import { Picture } from '@astrojs/image/components';
 import { Tags as PostTags } from '@astro-nx-depla/shared/ui';
 import { SocialShare } from '@astro-nx-depla/shared/ui';
 
-import { getPermalink } from '@astro-nx-depla/website/data-access/url';
 import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
 
-import type { Post } from '@astro-nx-depla/website/types';
+import { Post } from '@astro-nx-depla/website/entities/post';
+import type { Post as IPost } from '@astro-nx-depla/website/types';
 
 export interface Props {
-  post: Post;
-  url: string | URL;
+  post: IPost;
 }
 
-const { post, url } = Astro.props;
+const { post } = Astro.props;
 ---
 
 <section class="py-8 sm:py-16 lg:py-20 mx-auto">
@@ -30,7 +29,8 @@ const { post, url } = Astro.props;
               <>
                 {' '}
                 ·{' '}
-                <a class="capitalize hover:underline" href={getPermalink(post.category, 'category')}>
+                <a class="capitalize hover:underline"
+                  href={Post.getPostTaxonomyPermalink('category', post.category)}>
                   {post.category.replaceAll('-', ' ')}
                 </a>
               </>
@@ -89,7 +89,7 @@ const { post, url } = Astro.props;
     </div>
     <div class="mx-auto px-6 sm:px-6 max-w-3xl mt-8 flex justify-between flex-col sm:flex-row">
       <PostTags tags={post.tags} class="mr-5" />
-      <SocialShare url={url} text={post.title} class="mt-5 sm:mt-1 align-middle text-gray-500 dark:text-slate-600" />
+      <SocialShare url={post.url} text={post.title} class="mt-5 sm:mt-1 align-middle text-gray-500 dark:text-slate-600" />
     </div>
   </article>
 </section>
