--- a/libs/shared/ui/src/lib/Tags.astro
+++ b/libs/shared/ui/src/lib/Tags.astro
@@ -1,13 +1,12 @@
 ---
-import { getPermalink } from '@astro-nx-depla/website/data-access/url';
-
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
-import type { Post } from '@astro-nx-depla/website/types';
+import type { Post as IPost } from '@astro-nx-depla/website/types';
+import { Post } from '@astro-nx-depla/website/entities/post';
 
 const TAG = CONFIG.get('entities.post.taxonomies.tag')
 
 export interface Props {
-  tags: Post['tags'];
+  tags: IPost['tags'];
   class?: string;
 }
 
@@ -23,7 +22,7 @@ const { tags, class: className = 'text-sm' } = Astro.props;
             tag
           ) : (
             <a
-              href={getPermalink(tag, 'tag')}
+              href={Post.getPostTaxonomyPermalink('tag', tag)}
               class="text-muted dark:text-slate-300 hover:text-primary dark:hover:text-gray-200"
             >
               {tag}
