--- a/libs/shared/ui/src/lib/SinglePost.astro
+++ b/libs/shared/ui/src/lib/SinglePost.astro
@@ -7,8 +7,7 @@ import { SocialShare } from '@astro-nx-depla/shared/ui';
 
 import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
 
-import { Post } from '@astro-nx-depla/website/entities/post';
-import type { Post as IPost } from '@astro-nx-depla/website/types';
+import { Post, IPost } from '@astro-nx-depla/website/entities/post';
 
 export interface Props {
   post: IPost;
