--- a/apps/website/src/pages/[...blog]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[...page].astro
@@ -5,12 +5,12 @@ import {
   Headline,
   Pagination
 } from '@astro-nx-depla/shared/ui';
-import { Post } from '@astro-nx-depla/website/entities/post';
+import { db } from '@astro-nx-depla/website/db';
 
-export const getStaticPaths = Post.getPostListStaticPaths
+export const getStaticPaths = db.post.getPostListStaticPaths
 
 const { page } = Astro.props
-const meta = Post.getMetaByPage(page)
+const meta = db.post.getMetaByPage(page)
 ---
 
 <Layout {meta}>
