--- a/apps/website/src/pages/[...blog]/[category]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[category]/[...page].astro
@@ -1,12 +1,12 @@
 ---
 import { PageLayout } from '@astro-nx-depla/shared/layout';
 import { PostsList as BlogList, Headline, Pagination } from '@astro-nx-depla/shared/ui';
-import { Post } from '@astro-nx-depla/website/entities/post';
+import { db } from '@astro-nx-depla/website/db';
 
-export const getStaticPaths = Post.getPostCategoryListStaticPaths
+export const getStaticPaths = db.post.getPostCategoryListStaticPaths
 
 const { page, category } = Astro.props;
-const meta = Post.getPostCategoryMetaByPage(page, category)
+const meta = db.post.getPostCategoryMetaByPage(page, category)
 ---
 
 <PageLayout meta={meta}>
