--- a/apps/website/src/pages/[...blog]/[tag]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[tag]/[...page].astro
@@ -1,13 +1,13 @@
 ---
 import { PageLayout } from '@astro-nx-depla/shared/layout';
 import { Headline, PostsList as BlogList, Pagination } from '@astro-nx-depla/shared/ui';
-import { Post } from '@astro-nx-depla/website/entities/post';
+import { db } from '@astro-nx-depla/website/db';
 
-export const getStaticPaths = Post.getPostTagListStaticPaths
+export const getStaticPaths = db.post.getPostTagListStaticPaths
 
 const { page, tag } = Astro.props;
 
-const meta = Post.getPostTagMetaByPage(page, tag)
+const meta = db.post.getPostTagMetaByPage(page, tag)
 ---
 
 <PageLayout meta={meta}>
