--- a/libs/shared/ui/src/lib/HighlightedPosts.astro
+++ b/libs/shared/ui/src/lib/HighlightedPosts.astro
@@ -1,7 +1,7 @@
 ---
 import { PostsGrid as Grid } from '@astro-nx-depla/shared/ui';
 
-import { Post } from '@astro-nx-depla/website/entities/post';
+import { db } from '@astro-nx-depla/website/db';
 
 export interface Props {
   title?: string;
@@ -14,12 +14,12 @@ export interface Props {
 const {
   title = await Astro.slots.render('title'),
   allPostsText = 'View all posts',
-  allPostsLink = Post.getPostListPermalink(),
+  allPostsLink = db.post.getPostListPermalink(),
   information = await Astro.slots.render('information'),
   postIds = [],
 } = Astro.props;
 
-const posts = await Post.findPostsByIds(postIds);
+const posts = await db.post.findPostsByIds(postIds);
 ---
 
 <section class="px-4 py-16 mx-auto max-w-7xl lg:py-20">
