--- a/libs/shared/ui/src/lib/LatestPosts.astro
+++ b/libs/shared/ui/src/lib/LatestPosts.astro
@@ -1,6 +1,6 @@
 ---
 import { PostsGrid as Grid } from '@astro-nx-depla/shared/ui';
-import { Post } from '@astro-nx-depla/website/entities/post';
+import { db } from '@astro-nx-depla/website/db';
 
 export interface Props {
   title?: string;
@@ -13,12 +13,12 @@ export interface Props {
 const {
   title = await Astro.slots.render('title'),
   allPostsText = 'View all posts',
-  allPostsLink = Post.getPostListPermalink(),
+  allPostsLink = db.post.getPostListPermalink(),
   information = await Astro.slots.render('information'),
   count = 4,
 } = Astro.props;
 
-const posts = await Post.findLatestPosts({ count });
+const posts = await db.post.findLatestPosts({ count });
 ---
 
 <section class="px-4 py-16 mx-auto max-w-7xl lg:py-20">
