--- a/libs/shared/ui/src/lib/PostsGridItem.astro
+++ b/libs/shared/ui/src/lib/PostsGridItem.astro
@@ -2,15 +2,15 @@
 import { Picture } from '@astrojs/image/components';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
-import type { Post } from '@astro-nx-depla/website/types';
 
 import { findImage } from '@astro-nx-depla/website/data-access/url';
-import { Post } from '@astro-nx-depla/website/entities/post';
+import { IPost } from '@astro-nx-depla/website/entities/post';
+import { db } from '@astro-nx-depla/website/db';
 
 const BLOG = CONFIG.get('entities.post');
 
 export interface Props {
-  post: Post;
+  post: IPost;
 }
 
 const { post } = Astro.props;
@@ -44,7 +44,7 @@ const image = await findImage(post.image);
         post.title
       ) : (
         <a
-          href={Post.getPostPermalink(post.permalink)}
+          href={db.post.getPostPermalink(post.permalink)}
           class="hover:text-primary dark:hover:text-blue-700  transition ease-in duration-200"
         >
           {post.title}
