--- a/libs/shared/ui/src/lib/PostsListItem.astro
+++ b/libs/shared/ui/src/lib/PostsListItem.astro
@@ -4,8 +4,8 @@ import { Picture } from '@astrojs/image/components';
 import { Tags as PostTags } from '@astro-nx-depla/shared/ui';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
-import type { Post as IPost } from '@astro-nx-depla/website/types';
-import { Post } from '@astro-nx-depla/website/entities/post';
+import type { IPost } from '@astro-nx-depla/website/entities/post';
+import { db } from '@astro-nx-depla/website/db';
 
 import { findImage } from '@astro-nx-depla/website/data-access/url';
 import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
@@ -13,7 +13,7 @@ import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
 const BLOG = CONFIG.get('entities.post');
 
 export interface Props {
-  post: Post;
+  post: IPost;
 }
 
 const { post } = Astro.props;
@@ -65,7 +65,7 @@ const link = !BLOG?.item?.disabled ? post.permalink : '';
                 ·{' '}
                 <a
                   class="capitalize hover:underline"
-                  href={Post.getPostTaxonomyPermalink('category', post.category)}
+                  href={db.post.getPostTaxonomyPermalink('category', post.category)}
                 >
                   {post.category.replaceAll('-', ' ')}
                 </a>
@@ -81,7 +81,7 @@ const link = !BLOG?.item?.disabled ? post.permalink : '';
           link ? (
             <a
               class="hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200"
-              href={Post.getPostPermalink(link)}
+              href={db.post.getPostPermalink(link)}
             >
               {post.title}
             </a>
