--- a/apps/website/src/pages/[...blog]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[...page].astro
@@ -3,14 +3,14 @@ import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 import {
   PostsList as BlogList,
   Headline,
-  Pagination
+  Pagination,
 } from '@astro-nx-depla/shared/ui';
-import { db } from '@astro-nx-depla/website/db';
+import { app } from '@astro-nx-depla/website/app';
 
-export const getStaticPaths = db.post.getPostListStaticPaths
+export const getStaticPaths = app.post.getPostListStaticPaths;
 
-const { page } = Astro.props
-const meta = db.post.getMetaByPage(page)
+const { page } = Astro.props;
+const meta = app.post.getMetaByPage(page);
 ---
 
 <Layout {meta}>
