--- a/libs/shared/ui/src/lib/HighlightedPosts.astro
+++ b/libs/shared/ui/src/lib/HighlightedPosts.astro
@@ -1,7 +1,7 @@
 ---
 import { PostsGrid as Grid } from '@astro-nx-depla/shared/ui';
 
-import { db } from '@astro-nx-depla/website/db';
+import { app } from '@astro-nx-depla/website/app';
 
 export interface Props {
   title?: string;
@@ -14,12 +14,12 @@ export interface Props {
 const {
   title = await Astro.slots.render('title'),
   allPostsText = 'View all posts',
-  allPostsLink = db.post.getPostListPermalink(),
+  allPostsLink = app.post.getPostListPermalink(),
   information = await Astro.slots.render('information'),
   postIds = [],
 } = Astro.props;
 
-const posts = await db.post.findPostsByIds(postIds);
+const posts = await app.post.findPostsByIds(postIds);
 ---
 
 <section class="px-4 py-16 mx-auto max-w-7xl lg:py-20">
@@ -45,7 +45,14 @@ const posts = await db.post.findPostsByIds(postIds);
       }
     </div>
 
-    {information && <p class="text-muted dark:text-slate-400 lg:text-sm lg:max-w-md" set:html={information} />}
+    {
+      information && (
+        <p
+          class="text-muted dark:text-slate-400 lg:text-sm lg:max-w-md"
+          set:html={information}
+        />
+      )
+    }
   </div>
 
   <Grid posts={posts} />
