--- a/libs/shared/ui/src/lib/LatestPosts.astro
+++ b/libs/shared/ui/src/lib/LatestPosts.astro
@@ -1,6 +1,6 @@
 ---
 import { PostsGrid as Grid } from '@astro-nx-depla/shared/ui';
-import { db } from '@astro-nx-depla/website/db';
+import { app } from '@astro-nx-depla/website/app';
 
 export interface Props {
   title?: string;
@@ -13,12 +13,12 @@ export interface Props {
 const {
   title = await Astro.slots.render('title'),
   allPostsText = 'View all posts',
-  allPostsLink = db.post.getPostListPermalink(),
+  allPostsLink = app.post.getPostListPermalink(),
   information = await Astro.slots.render('information'),
   count = 4,
 } = Astro.props;
 
-const posts = await db.post.findLatestPosts({ count });
+const posts = await app.post.findLatestPosts({ count });
 ---
 
 <section class="px-4 py-16 mx-auto max-w-7xl lg:py-20">
@@ -44,7 +44,14 @@ const posts = await db.post.findLatestPosts({ count });
       }
     </div>
 
-    {information && <p class="text-muted dark:text-slate-400 lg:text-sm lg:max-w-md" set:html={information} />}
+    {
+      information && (
+        <p
+          class="text-muted dark:text-slate-400 lg:text-sm lg:max-w-md"
+          set:html={information}
+        />
+      )
+    }
   </div>
 
   <Grid posts={posts} />
