--- a/libs/shared/ui/src/lib/PostsListItem.astro
+++ b/libs/shared/ui/src/lib/PostsListItem.astro
@@ -5,7 +5,7 @@ import { Tags as PostTags } from '@astro-nx-depla/shared/ui';
 
 import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import type { IPost } from '@astro-nx-depla/website/entities/post';
-import { db } from '@astro-nx-depla/website/db';
+import { app } from '@astro-nx-depla/website/app';
 
 import { findImage } from '@astro-nx-depla/website/data-access/url';
 import { getFormattedDate } from '@astro-nx-depla/shared/util/formatting';
@@ -65,7 +65,10 @@ const link = !BLOG?.item?.disabled ? post.permalink : '';
                 ·{' '}
                 <a
                   class="capitalize hover:underline"
-                  href={db.post.getPostTaxonomyPermalink('category', post.category)}
+                  href={app.post.getPostTaxonomyPermalink(
+                    'category',
+                    post.category
+                  )}
                 >
                   {post.category.replaceAll('-', ' ')}
                 </a>
@@ -81,7 +84,7 @@ const link = !BLOG?.item?.disabled ? post.permalink : '';
           link ? (
             <a
               class="hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200"
-              href={db.post.getPostPermalink(link)}
+              href={app.post.getPostPermalink(link)}
             >
               {post.title}
             </a>
