--- a/libs/shared/ui/src/lib/ToBlogLink.astro
+++ b/libs/shared/ui/src/lib/ToBlogLink.astro
@@ -1,10 +1,10 @@
 ---
 import { Icon } from 'astro-icon';
-import { db } from '@astro-nx-depla/website/db';
+import { app } from '@astro-nx-depla/website/app';
 ---
 
 <div class="mx-auto px-6 sm:px-6 max-w-3xl pt-8 md:pt-4 pb-12 md:pb-20">
-  <a class="btn btn-ghost px-3 md:px-3" href={db.post.getPostListPermalink()}
+  <a class="btn btn-ghost px-3 md:px-3" href={app.post.getPostListPermalink()}
     ><Icon name="tabler:chevron-left" class="w-5 h-5 mr-1 -ml-1.5" /> Back to Blog</a
   >
 </div>
