--- a/apps/website/src/pages/index.astro
+++ b/apps/website/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
+import { app } from '@astro-nx-depla/website/app';
 import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
 import {
@@ -15,11 +15,9 @@ import {
   CallToAction
 } from '@astro-nx-depla/shared/ui';
 
-const SITE = CONFIG.get('app')
-
 const meta = {
-  title: SITE.title,
-  description: SITE.description,
+  title: app.config.title,
+  description: app.config.description,
   dontUseTitleTemplate: true,
 };
 ---
