--- a/libs/shared/layout/src/lib/BaseLayout.astro
+++ b/libs/shared/layout/src/lib/BaseLayout.astro
@@ -2,8 +2,8 @@
 import '~/assets/styles/base.css';
 import { MetaTags } from '@astro-nx-depla/shared/ui';
 import BasicScripts from '~/components/BasicScripts.astro';
-import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 
+import { app } from '@astro-nx-depla/website/app';
 import { MetaSEO } from '@astro-nx-depla/website/types';
 
 export interface Props {
@@ -11,7 +11,7 @@ export interface Props {
 }
 
 const { meta = {} } = Astro.props;
-const { language = 'en', textDirection = 'ltr' } = CONFIG.get('app')
+const { language = 'en', textDirection = 'ltr' } = app.config
 ---
 
 <!DOCTYPE html>
