--- a/libs/shared/ui/src/lib/PostsGridItem.astro
+++ b/libs/shared/ui/src/lib/PostsGridItem.astro
@@ -1,13 +1,13 @@
 ---
 import { Picture } from '@astrojs/image/components';
 
-import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
+import { app } from '@astro-nx-depla/website/app';
 
 import { findImage } from '@astro-nx-depla/website/data-access/url';
 import { IPost } from '@astro-nx-depla/website/entities/post';
 import { app } from '@astro-nx-depla/website/app';
 
-const BLOG = CONFIG.get('entities.post');
+const BLOG = app.post.config
 
 export interface Props {
   post: IPost;
