--- a/libs/shared/ui/src/lib/Tags.astro
+++ b/libs/shared/ui/src/lib/Tags.astro
@@ -1,9 +1,8 @@
 ---
-import { CONFIG } from '@astro-nx-depla/shared/util/config-provider';
 import { app } from '@astro-nx-depla/website/app';
 import { IPost } from '@astro-nx-depla/website/entities/post';
 
-const TAG = CONFIG.get('entities.post.taxonomies.tag');
+const TAG = app.post.config.taxonomies.tag
 
 export interface Props {
   tags: IPost['tags'];
