move MetaSEO type to shared

--- a/apps/website/src/pages/404.astro
+++ b/apps/website/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
 import { BaseLayout as Layout } from '@astro-nx-depla/shared/layout';
-import { App } from '@astro-nx-depla/website/entities/app';
+import { app } from '@astro-nx-depla/website/app';
 
 const title = `Error 404`;
 ---
@@ -17,7 +17,7 @@ const title = `Error 404`;
         <p class="mt-4 mb-8 text-lg text-muted dark:text-slate-400">
           But dont worry, you can find plenty of other things on our homepage.
         </p>
-        <a rel="noopener noreferrer" href={App.getAppPermalink()} class="btn ml-4">Back to homepage</a>
+        <a rel="noopener noreferrer" href={app.permalink()} class="btn ml-4">Back to homepage</a>
       </div>
     </div>
   </section>
