--- a/libs/shared/layout/src/lib/MarkdownLayout.astro
+++ b/libs/shared/layout/src/lib/MarkdownLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from './PageLayout.astro';
 
-import { MetaSEO } from '~/types';
+import { MetaSEO } from '@astro-nx-depla/shared/types/html';
 
 export interface Props {}
 
