--- a/libs/shared/layout/src/lib/PageLayout.astro
+++ b/libs/shared/layout/src/lib/PageLayout.astro
@@ -5,7 +5,7 @@ import { app } from '@astro-nx-depla/website/app'
 
 import { headerData, footerData } from '@astro-nx-depla/website/menu-data';
 
-import { MetaSEO } from '~/types';
+import { MetaSEO } from '@astro-nx-depla/shared/types/html';
 
 export interface Props {
   meta?: MetaSEO;
