--- a/libs/shared/ui/src/lib/MetaTags.astro
+++ b/libs/shared/ui/src/lib/MetaTags.astro
@@ -41,13 +41,7 @@ const {
   dontUseTitleTemplate = false,
 } = Astro.props;
 
-const image =
-  typeof _image === 'string'
-    ? new URL(_image, Astro.site)
-    : _image && typeof _image['src'] !== 'undefined'
-    ? // @ts-ignore
-      new URL(getRelativeUrlByFilePath(_image.src), Astro.site)
-    : null;
+const image = typeof _image === 'string' ? new URL(_image, Astro.site) : null
 ---
 
 <meta charset="UTF-8" />
