--- a/apps/website/src/pages/admin2.astro
+++ b/apps/website/src/pages/admin2.astro
@@ -12,20 +12,20 @@ import { BaseLayout as Layout } from '@astro-nx-depla/shared/layout';
       window.CMS_MANUAL_INIT = true;
     </script>
     <script is:inline src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-<script is:inline define:vars={{ app.isProd }}>
+<script is:inline define:vars={{ isProd: app.isProd }}>
       const { CMS, initCMS: init } = window;
       console.log(CMS, init);
       /* CMS.registerWidget('mdx', MdxControl, MdxPreview); */
 
       /* CMS.init(); */
-      if (app.isProd) {
+      if (isProd) {
         console.log('Hey I am currently in production')
       }else {
         console.log('Hey I am currently NOT in production')
       }
       init({
         config: {
-          backend: (app.isProd ? {
+          backend: (isProd ? {
             name: 'git-gateway',
             branch: 'main',
           } : {
@@ -33,14 +33,14 @@ import { BaseLayout as Layout } from '@astro-nx-depla/shared/layout';
             proxy_url: 'http://localhost:8081/api/v1git-gateway',
             branch: 'main',
           }),
-          local_backend: app.isProd ? false : true,
+          local_backend: isProd ? false : true,
           load_config_file: false,
           media_folder: 'apps/website/src/assets/images',
           public_folder: '~/assets/images',
           publish_mode: 'editorial_workflow',
           collections: [
             {
-              label: app.isProd ? 'Posts' : 'Shmosts',
+              label: isProd ? 'Posts' : 'Shmosts',
               name: 'post',
               folder: 'apps/website/src/content/post',
               create: true,
