move data-access-url to image util

--- a/libs/shared/ui/src/lib/PostsGridItem.astro
+++ b/libs/shared/ui/src/lib/PostsGridItem.astro
@@ -3,11 +3,11 @@ import { Picture } from '@astrojs/image/components';
 
 import { app } from '@astro-nx-depla/website/app';
 
-import { findImage } from '@astro-nx-depla/website/data-access/url';
+import { findImage } from '@astro-nx-depla/shared/util/image';
 import { IPost } from '@astro-nx-depla/website/entities/post';
 import { app } from '@astro-nx-depla/website/app';
 
-const BLOG = app.post.config
+const BLOG = app.post.config;
 
 export interface Props {
   post: IPost;
