move menu data to app

--- a/apps/website/src/pages/landing/saas.astro
+++ b/apps/website/src/pages/landing/saas.astro
@@ -3,7 +3,7 @@ import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
 import { Header, Hero2, Steps2, Content, CallToAction  } from '@astro-nx-depla/shared/ui';
 
-import { headerData } from '@astro-nx-depla/website/menu-data';
+import { headerData } from '~/data/navigation';
 
 const meta = {
   title: 'Saas Landing Page',
