--- a/apps/website/src/pages/landing/startup.astro
+++ b/apps/website/src/pages/landing/startup.astro
@@ -3,7 +3,7 @@ import { PageLayout as Layout } from '@astro-nx-depla/shared/layout';
 
 import { Header, Hero, CallToAction } from '@astro-nx-depla/shared/ui';
 
-import { headerData } from '@astro-nx-depla/website/menu-data';
+import { headerData } from '~/data/navigation';
 
 const meta = {
   title: "Startup Landing Page",
