move CSS + JS to shared UI library for meanwhile

--- a/libs/shared/ui/src/lib/layouts/BaseLayout.astro
+++ b/libs/shared/ui/src/lib/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import '~/assets/styles/base.css';
 import { MetaTags } from '@astro-nx-depla/shared/ui';
-import BasicScripts from '~/components/BasicScripts.astro';
+import BasicScripts from '../js/BasicScripts.astro';
 
 import { app } from '@astro-nx-depla/website/app';
 import { MetaSEO } from '@astro-nx-depla/shared/types/html';
