--- a/libs/shared/ui/src/lib/MetaTags.astro
+++ b/libs/shared/ui/src/lib/MetaTags.astro
@@ -7,7 +7,7 @@ import { app } from '@astro-nx-depla/website/app';
 import { MetaSEO } from '@astro-nx-depla/shared/types/html';
 import { getCanonical } from '@astro-nx-depla/shared/util/url';
 
-import CustomStyles from '~/components/CustomStyles.astro';
+import Tailwind from './styles/Tailwind.astro';
 import { SplitbeeAnalytics } from '@astro-nx-depla/shared/ui';
 
 export interface Props extends MetaSEO {
@@ -75,7 +75,7 @@ const image = typeof _image === 'string' ? new URL(_image, Astro.site) : null
   }}
 />
 
-<CustomStyles />
+<Tailwind />
 
 <!-- Google Site Verification -->
 {
