move cms out of website

--- a/apps/website/src/pages/admin15.astro
+++ b/apps/website/src/pages/admin15.astro
@@ -1,6 +1,7 @@
 ---
-import { BaseLayout as Layout } from '@astro-nx-depla/shared/ui';
+import { BaseLayout as Layout} from '@astro-nx-depla/shared/ui';
+import { Cms } from '@cms';
 ---
-<Layout />
-
-<script>import "~/components/cms.jsx"</script>
+<Layout>
+  <Cms client:only="react" />
+</Layout>
